# smell-check

./: .gitignore  CHAMBER_KERNEL_SPEC.md  CLAUDE.md  Dockerfile  LICENSE  README.md  fly.toml  pyproject.toml
smell_check/: analyzer.py  atlas.py  chamber.py  code_perception.py  emit_packet.py  epistemic_tagger.py  gateway.py  mother_types.py  pipeline.py  projections.py  receipted.py  review_perception.py  sieve.py  text_utils.py
src/surface/: gateway.py  mother_types.py  pipeline.py  projections.py  receipted.py  sieve.py
tests/: test_chamber.py  test_code_smell.py  test_diff_lane.py  test_gateway.py  test_governance.py  test_invariants.py  test_mixed_input.py  test_new_senses.py  test_pipeline.py  test_pipeline_determinism.py  test_receipt_integrity.py  test_round_trip.py  test_store.py
