[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "smell-check"
version = "0.1.0"
description = "Smell detection for code"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{name = "Benjamin Fenton"}]
keywords = ["code-review", "smell", "mcp", "deterministic"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "pydantic>=2.0",
    "mcp>=1.2.0",
]

[project.optional-dependencies]
dev = ["pytest"]

[project.urls]
Repository = "https://github.com/fentonbenjamin/smell-check"

[tool.pytest.ini_options]
testpaths = ["tests"]
